# epub-to-tts

./: .gitignore  README.md  list_voices.py  main.py  main_gtts.py  pyproject.toml
src/epub-to-tts/: list_voices.py  main.py
